--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,3 +4,6 @@ main: main.nbth.NamedBinaryTagHelper
 api-version: 1.19
 authors: [Smoup]
 description: Allows you to quickly find out/change the NBT of the selected block using the right mouse button
+commands:
+  nbt:
+    description: "Allows you to quickly find out/change the NBT of the selected block using the right mouse button"
